# tigi_challenge

./: .gitignore  Makefile  README.md  pyproject.toml
src/string_calculator/: __init__.py  string_calculator.py
tests/: test_string_calculator.py
